# mkdocs-submodule-edit-uri

./: README.md  pyproject.toml  setup.py
.github/workflows/: CI.yml  release.yml
src/mkdocs_submodule_edit_uri/: __init__.py  plugin.py
tests/: test_plugin.py
