[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-submodule-edit-uri"
version = "1.0.3"
keywords = ["mkdocs", "markdown", "submodules", "github", "edit_uri"]
description = "A plugin to convert the edit_uri for GitHub submodules"
readme = "README.md"
requires-python = ">=3.7"
authors = [{ name = "Sondre Grønås", email = "mail@sondregronas.com" }]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation"
]

dependencies = [
    "mkdocs>=1",
    "setuptools"
]

[project.urls]
homepage = "https://github.com/sondregronas/mkdocs-submodule-edit-uri"
documentation = "https://github.com/sondregronas/mkdocs-submodule-edit-uri"
repository = "https://github.com/sondregronas/mkdocs-submodule-edit-uri"
issues = "https://github.com/sondregronas/mkdocs-submodule-edit-uri/issues"
funding = "https://github.com/sponsors/sondregronas"

[project.optional-dependencies]
tests = [
    'pytest'
]

[project.entry-points."mkdocs.plugins"]
submodule-edit-uri = "mkdocs_submodule_edit_uri.plugin:SubmoduleEditUriPlugin"
